[#114662465441537] Fix message header overlapping where it shouldn't

--- a/packrat/styles/keeper/pane.less
+++ b/packrat/styles/keeper/pane.less
@@ -633,7 +633,7 @@ a.kifi-notices-filter-page {
 }
 .kifi-thread-who {
   position: relative;
-  z-index: 10;
+  z-index: 1;
   border-radius: 12px 12px 0 0 !important;
 }
 .kifi-thread-who.kifi-active {
